# dokumentvwsys

./: .gitignore  .restyled.yml  Capfile  Cargo.toml  Gemfile  diesel.toml  package.json
.github/: auto-merge.yml  dependabot.yml
.github/workflows/: auto-approve.yml  auto-merge.yml  build_test.yml  labeler.yml  pull_request_labeler.yml
api/: Cargo.toml
api/src/: main.rs
app/controllers/: administration_controller.rb  application_controller.rb  documents_controller.rb  legal_controller.rb  preferences_controller.rb
app/helpers/: application_helper.rb
app/models/: user.rb
config/: application.rb  cable.yml  credentials.yml.enc  routes.rb
config/initializers/: devise.rb
config/locales/: de.yml  documents.en.yml  errors.de.yml  forms.de.yml  forms.en.yml  messages.en.yml  preferences.de.yml  preferences.en.yml  role.en.yml
db/: schema.rb  seeds.rb
db/migrate/: 20210303192631_devise_create_users.rb  20210303202106_create_documents.rb  20210305151017_add_user_to_document.rb  20210305151551_add_full_name_to_user.rb  20210305155240_add_birthdate_to_user.rb  20210311212707_create_preferences.rb  20210325193630_add_binary_to_preference.rb  20210325210322_remove_description_from_preferences.rb  20210626121401_make_user_mail_not_unique.rb  20210626200836_addpreferences.rb  (+1 more)
dcmntvwsyslib/: Cargo.toml
dcmntvwsyslib/examples/: user_model.rs
dcmntvwsyslib/migrations/2022-07-14-173252_create_users/: up.sql
dcmntvwsyslib/src/: lib.rs  schema.rs  users.rs
lib/tasks/: production.rake
src/: Dockerfile  docker-compose.yml  entrypoint.sh
test/: test_helper.rb
(+103 files in other folders)
