[package]
name = "dcmntvwsyslib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
anyhow = "1.0"
rand = "0.8"
bcrypt = "0.13"

[dev-dependencies]
chrono = "0.4.19"